[tool.poetry]
name = "geo-io-utils"
version = "0.1.0"
description = ""
authors = ["tmp-croissant"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rasterio = "^1.3.7"
xarray = "^2023.5.0"
rioxarray = "^0.14.1"
geopandas = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
